<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.bublik</groupId>
    <artifactId>bublik</artifactId>
    <version>26.3.24</version>
    <packaging>pom</packaging>

    <developers>
        <developer>
            <name>Dmitrii Rudik</name>
            <email>dima.rudik@gmail.com</email>
            <organization>Bublik</organization>
            <organizationUrl>http://www.bublik.dev</organizationUrl>
        </developer>
    </developers>

    <name>bublik</name>
    <description>Bublik parent module</description>
    <url>https://github.com/dimarudik/bublik/tree/stable</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/dimarudik/bublik.git</connection>
        <developerConnection>scm:git:ssh://github.com:dimarudik/bublik.git</developerConnection>
        <url>https://github.com/dimarudik/bublik/tree/stable</url>
    </scm>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <log4j.version>3.0.0-beta2</log4j.version>
        <jackson.version>2.20.0</jackson.version>
        <lombok.version>1.18.38</lombok.version>
        <mockito.version>5.23.0</mockito.version>
        <junit-jupiter.version>6.1.0</junit-jupiter.version>
        <testcontainers.version>2.0.5</testcontainers.version>
        <spring-boot-configuration>4.1.0</spring-boot-configuration>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <modules>
        <module>bublik-cassandra</module>
        <module>bublik-cli</module>
        <module>bublik-clickhouse</module>
        <module>bublik-core</module>
        <module>bublik-kafka</module>
        <module>bublik-mssql</module>
        <module>bublik-oracle</module>
        <module>bublik-postgres</module>
        <module>bublik-ydb</module>
        <module>bublik-spring-boot-starter</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.9.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.12.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.8</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
